examples/test/testpolicy6384.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6384
  namespace: namespace162
spec:
  podSelector:
    matchLabels:
      key14: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value7
          key2: value16
          key1: value34
      podSelector:
        matchLabels:
          key31: value25
          key26: value41
